Added usau request, set prices for league

--- a/templates/views/confirmation.jade
+++ b/templates/views/confirmation.jade
@@ -24,7 +24,7 @@ block content
     p Yes, people wear cleats. Some like soccer cleats, others like lacrosse, and a few wear football cleats, it really just depends on what feels right for your feet.
     
     p
-      strong Will there be a schedule released? I know games are on Sundays, but I’m looking for who is playing whom and at what time.
+      strong Will there be a schedule released?
     p Schedules are released after the draft, because at that point we define how many teams will be playing. Right now we will be close to the boundary between 4 and 6 teams.
     
     p
@@ -33,7 +33,9 @@ block content
 
     p
       strong Is there anything else I should know as a new person starting in this league?
-    p If possible try to play some pick up before attending league so that you can get a feel for how people play. That will give you a feel of how people play in the area. If you are not sure on where to find pick up, then visit <a href="https://www.sflultimate.com/pickups" target="_blank">https://www.sflultimate.com/pickups</a>. I also recommend that you skim through the rules as they sometimes change <a href="https://usaultimate.org/rules/" target="_blank">https://usaultimate.org/rules/</a>. Note that even experienced players forget to check these rules, but knowledge of them helps clear up awkward confusions, and allows you to make confident assessments of what happens during a foul.
+    p If possible try to play some pick up before attending league so that you can get a feel for how people play. That will give you a feel of how people play in the area. If you are not sure on where to find pick up, then visit <a href="https://www.sflultimate.com/pickups" target="_blank">https://www.sflultimate.com/pickups</a>. 
+    p I also recommend that you skim through the rules as they sometimes change <a href="https://usaultimate.org/rules/" target="_blank">https://usaultimate.org/rules/</a>. 
+    p Note that even experienced players forget to check these rules, but knowledge of them helps clear up awkward confusions, and allows you to make confident assessments of what happens during a foul.
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jsSocials/1.5.0/jssocials.min.js")
