Made it optional if no late registration is defined

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -30,10 +30,11 @@ block content
             
             br
             
-            .alert.alert-info 
-              | Late registration (at a $#{locals.fees.lateAdult} fee for everyone, as space permits) start on #{locals.league.lateRegistrationStart.toLocaleDateString(undefined, { weekday: 'long', month: 'short', day: 'numeric', timeZone: 'America/New_York' })} 
-              | until #{locals.league.lateRegistrationEnd.toLocaleDateString(undefined, { weekday: 'long', month: 'short', day: 'numeric', timeZone: 'America/New_York' })} at 
-              | #{locals.league.lateRegistrationEnd.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit', timeZone: 'America/New_York'})}
+            if locals.league.lateRegistrationStart || locals.league.lateRegistrationEnd
+              .alert.alert-info
+                | Late registration (at a $#{locals.fees.lateAdult} fee for everyone, as space permits) start on #{locals.league.lateRegistrationStart.toLocaleDateString(undefined, { weekday: 'long', month: 'short', day: 'numeric', timeZone: 'America/New_York' })} 
+                | until #{locals.league.lateRegistrationEnd.toLocaleDateString(undefined, { weekday: 'long', month: 'short', day: 'numeric', timeZone: 'America/New_York' })} at 
+                | #{locals.league.lateRegistrationEnd.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit', timeZone: 'America/New_York'})}
     
             hr
     
