--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -4,7 +4,7 @@ block head
     meta(property="og:title" content="Register now for the SFL Ultimate " + locals.league.title)
     meta(property="og:url" content="https://www.sflultimate.com/register")
     meta(property="og:description" content=locals.league.summary || '')
-    meta(property="og:image" content="https://www.sflultimate.com/images/open-graph/2023-beach-league-registration.jpg")
+    meta(property="og:image" content="https://www.sflultimate.com/images/open-graph/2023-beach-league-registration.png")
     script(src="https://www.google.com/recaptcha/api.js?render=6Ld6rNQUAAAAAAthlbLL1eCF9NGKfP8-mQOHu89w")
 block content
     
