Added payment processing note

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -170,6 +170,7 @@ block content
                 .form-group
                     label(for="streetAddress") Street Address
                     input#streetAddress.input-lg.form-control(type='text' name='streetAddress' placeholder='' required)
+                    p.help-block If you plan on paying with card (so no PayPal) type here just your street address (So 12345 Palm Tree Ave.). Do not pass city/zip code or apt number. We do not store this information, but send it to the payment processor for fraud prevention.
                 
                 #payment-form
                 .text-center
