--- a/templates/views/events.jade
+++ b/templates/views/events.jade
@@ -15,7 +15,7 @@ block content
                     .col-sm-12
                         h2=event.title
                         p
-                            strong=new Date(event.start_time).toLocaleString('en-US', {month: 'long', hour: 'numeric', day: 'numeric'})
+                            strong=event.start_time_formatted
                             |  <br/><em>#{event.location}</em>
                             |  •  #{event.category}
                         p=event.description
@@ -32,7 +32,7 @@ block content
                     .col-sm-12
                       h3=event.title
                   p
-                      strong=new Date(event.start_time).toLocaleString('en-US', {month: 'long', year: 'numeric'})
+                      strong=event.start_time_formatted
                         |  <br/><em>#{event.location}</em>
                         |  •  #{event.category}
                   p=event.description
