--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -3,11 +3,24 @@ extends ../layouts/default
 block content
 
     .container-fluid(ng-app='draftboardApp')
-        if user
-            #loggedin
 
         h1=league.title + " Draftboard"
+        if user
+            #logged-in
         #draftboard(ng-controller='PlayerTableController')
+            .drafted-teams.row
+                .col-md-4(ng-repeat="team in teams" ng-if="user")
+                    table.table
+                        thead
+                            tr
+                                th {{team.name}} ({{team.players.length}})
+                                th Actions
+                        tbody
+                            tr(ng-repeat="playerID in team.players")
+                                td {{playerMap[playerID].name.first}} {{playerMap[playerID].name.last}} ({{playerMap[playerID].gender.charAt(0)}})
+                                td
+                                    button.btn.btn-default.btn-sm(ng-click="modifyRoster(team, {_id: playerID}, 'remove')") Remove
+    
             p.lead There are {{players.length}} players registered.
 
             .btn-group
@@ -29,6 +42,7 @@ block content
                     th Partner
                     th Comments
                     th Would Captain?
+                    th(ng-if="user") Actions
                 tbody
                     tr(ng-repeat='player in players | orderBy:"-skill"')
                         td {{$index + 1}}
@@ -43,6 +57,10 @@ block content
                         td 
                          | <small class="badge" ng-style="getBadgeStyle(player)">{{player.team ? "Rostered": "Unassigned"}}</small> {{player.comments}} 
                         td {{player.wouldCaptain ? 'Yes': ''}}
+                        td(ng-if="user") 
+                            button(ng-repeat="team in teams" ng-click="modifyRoster(team, player, 'add')" ng-if="!player.team").btn.btn-default Add To {{team.name}}
+                            
+                        
 
             .row
                 .col-md-12
