Fixing registration level for student display and script for undrafted players

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -165,7 +165,7 @@ block content
                                 option(value='Student')="Student - $" + fees.regularStudent
                             if locals.league.isLateRegistrationPeriod
                                 option(value='Adult')="Adult - $" + fees.lateAdult
-                                option(value='Student') Student - $" + fees.lateStudent
+                                option(value='Student')="Student - $" + fees.lateStudent
                 
                 .form-group
                     label(for="streetAddress") Street Address
