Added throwaways and drops

--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -81,16 +81,22 @@ html
               th Assists
               th Scores
               th Defenses
+              th Throwaways
+              th Drops
               th Attended
             tbody
               tr(ng-repeat="player in team.currentTeam.players | orderBy: 'name.first'")
                 td(style='width: 20%') {{player.name.first}} {{player.name.last}}
                 td
-                  input(ng-model="player.stats.assists" ng-if="editor" type="number" step="1")
+                  input(ng-model="player.stats.assists" ng-if="editor" min="0" type="number" step="1")
                 td
-                  input(ng-model="player.stats.scores" ng-if="editor" type="number" step="1")
+                  input(ng-model="player.stats.scores" ng-if="editor" min="0" type="number" step="1")
                 td
-                  input(ng-model="player.stats.defenses" ng-if="editor" type="number" step="1")
+                  input(ng-model="player.stats.defenses" ng-if="editor" min="0" type="number" step="1")
+                td
+                  input(ng-model="player.stats.throwaways" ng-if="editor" min="0" type="number" step="1")
+                td
+                  input(ng-model="player.stats.drops" ng-if="editor" min="0" type="number" step="1")
                 td
                   input(ng-model="player.stats.attended" ng-if="editor" type="checkbox")
 
